signup,login,logut, session, done

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,13 +1,12 @@
 <h2>Registrate</h2>
 <form action="/signup" method="post">
-    <input type="text" name="username" placeholder="tu nombre"/><br>
+    <input type="text" name="name" placeholder="tu nombre"/><br>
     <input type="text" name="lastname" placeholder="tu apellido" /><br>
-    <input type="email" name="email" placeholder="tu mail" /><br>
+    <input type="email" name="username" placeholder="tu mail" /><br>
     <input type="password" name="password" placeholder="tu pass"/><br>
     <input type="password" name="password2" placeholder="repite"/><br>
     <input type="text" name="city" placeholder="ciudad"/><br>
     <input type="text" name="street" placeholder="calle y numero"/><br>
-    <input type="Number" name="postalCode" placeholder="codigo postal"/><br>        
-
+    <input type="Number" name="postalCode" placeholder="codigo postal"/><br>
     <input type="submit"/>
 </form>
