--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,14 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}} Probando</p>
+
+<form action="/login" method="get">
+<label for="">Inicia sesión</label>
+  <input type="submit" name="login" value="Login">
+
+</form>
+
+<form action="/signup" method="get">
+  <label for="">O registrate</label>
+  <input type="submit" name="signup" value="signup">
+
+</form>
