--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,6 @@
-<h2>Registrate</h2>
+
+<!--<br>
+
 <form action="/signup" method="post">
     <input type="text" name="username" placeholder="tu nombre"/><br>
     <input type="text" name="lastname" placeholder="tu apellido" /><br>
@@ -11,3 +13,117 @@
 
     <input type="submit"/>
 </form>
+<br><br><br>-->
+
+<div class="container cuadro">
+
+<section class="formulario">
+<form action="/signup" method="post">
+<h2 class="title is-2">Regístrate</h2><br><br>
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Name</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <p class="control is-expanded has-icons-left">
+                    <input class="input" type="text" placeholder="Name"  name="username">
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-user"></i>
+                    </span>
+                </p>
+            </div>
+            <div class="field">
+                <p class="control is-expanded has-icons-left">
+                    <input class="input" type="text" placeholder="Last Name" name="lastname">
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-user"></i>
+                    </span>
+                </p>
+            </div>            
+            <div class="field">
+                <p class="control is-expanded has-icons-left has-icons-right">
+                    <input class="input" type="email" placeholder="Email" name="email">
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-envelope"></i>
+                    </span>
+                </p>
+            </div>
+        </div>
+    </div>
+    <br><br>
+
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Password</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <div class="control">
+                    <input class="input" type="password" name="password">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+        <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Repeat password</label>
+            </div>
+            <div class="field-body">
+                <div class="field">
+                    <div class="control">
+                        <input class="input" type="password" name="password2">
+                    </div>
+                </div>
+            </div>
+        </div>
+    <br><br>
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">City</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <div class="control">
+                    <input class="input" type="text" name="city">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Street</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <div class="control">
+                    <input class="input" type="text" name="street">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Postal code</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <div class="control">
+                    <input class="input" type="text" name="postalcode">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+            <button class="button is-success" type="submit">Save changes</button>
+
+</form>
+</section>
+</div>
+
+<section>
+
+</section>
