--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>{{title}}</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <link rel='stylesheet' href='../public/stylesheets/style.scss' />
+  </head>
+
+
 <h1>{{title}}</h1>
 <p>Welcome to {{title}} Probando</p>
