--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,15 +1,20 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; 
   background: #b3b3b3;
-  background-image: url('../images/background image.png')
-
+  background-image: url('../images/background image.png');
 }
 
 a {
-  color: #00B7FF; }
+  color: #00B7FF; 
+}
 
 .footer {
-  background: black;
+  background-color: black;
+  color: white;
+}
+
+footer {
+  background-color: black;
   color: white;
 }
 
