--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -60,7 +60,10 @@
         <div class="field-body">
             <div class="field">
                 <div class="control">
-                    <input class="input" type="password" name="password">
+                    <p class="control has-icons-left">
+                        <input class="input" type="password" name="password" placeholder="Type your password">
+                        <span class="icon is-small is-left"><i class="fas fa-lock"></i></span>
+                    </p>
                 </div>
             </div>
         </div>
@@ -73,7 +76,10 @@
             <div class="field-body">
                 <div class="field">
                     <div class="control">
-                        <input class="input" type="password" name="password2">
+                        <p class="control has-icons-left">
+                            <input class="input" type="password" name="password2" placeholder="Type again your password">
+                            <span class="icon is-small is-left"><i class="fas fa-lock"></i></span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -123,7 +129,3 @@
 </form>
 </section>
 </div>
-
-<section>
-
-</section>
