--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,9 @@ footer {
 .button {
   align-items: center; }
 
+.cuadro2 {
+  background-image: url("../images/background_banner.png"); }
+
 /*# sourceMappingURL=style.css.map */
 
 /*# sourceMappingURL=style.css.map */
