--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -32,4 +32,8 @@ footer {
   align-items: center;
 }
 
+.cuadro2 {
+  background-image: url('../images/background_banner.png');
+}
+
 /*# sourceMappingURL=style.css.map */
