--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,32 @@
     <title>{{title}}</title>
   </head>
 
+<!-- Hero content: will be in the middle -->
+<section class="cuadro2">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title">
+              <img src="images/fixit logo.png" alt="Logo">
+            </h1>
+            <h2 class="subtitle">
+              Find the best people for your solutions
+            </h2>
+        </div>
+    </div>
 
+    <!-- Hero footer: will stick at the bottom -->
+    <div class="hero-foot">
+        <nav class="tabs">
+            <div class="container">
+                <ul>
+                    <li class="is-active"><a>Overview</a></li>
+                    <li><a>How it works?</a></li>
+                    <li><a>Projects</a></li>
+                    <li><a>Workers</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</section>
 <h1>{{title}}</h1>
-<p>Welcome to {{title}} Probando</p>
+<p>Welcome to {{title}}</p>
