--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,7 +44,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        <strong>FIXIT-NOW</strong> by <a href="https://jgthms.com">Rene & Alex</a>. The source code is licensed
+        FIXIT-NOW by <a href="/">Rene & Alex</a>. The source code is licensed
         <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. Done in Ironhack.
       </p>
     </div>
