--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,14 @@ footer {
   align-items: center; }
 
 .cuadro2 {
-  background-image: url("../images/background_banner.png"); }
+  background-image: url("../images/banner_back.jpg");
+  background-position: center; }
+
+.subtitulo {
+  color: white; }
+
+.secciones {
+  color: white; }
 
 /*# sourceMappingURL=style.css.map */
 
