--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -33,7 +33,16 @@ footer {
 }
 
 .cuadro2 {
-  background-image: url('../images/background_banner.png');
+  background-image: url('../images/banner_back.jpg');
+  background-position: center; 
+}
+
+.subtitulo {
+  color: white;
+}
+
+.secciones {
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
