--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
             <h1 class="title">
               <img src="images/fixit logo.png" alt="Logo">
             </h1>
-            <h2 class="subtitle">
+            <h2 class="subtitle subtitulo">
               Find the best people for your solutions
             </h2>
         </div>
@@ -22,7 +22,7 @@
         <nav class="tabs">
             <div class="container">
                 <ul>
-                    <li class="is-active"><a>Overview</a></li>
+                    <li class="secciones"><a>Overview</a></li>
                     <li><a>How it works?</a></li>
                     <li><a>Projects</a></li>
                     <li><a>Workers</a></li>
