--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,8 +21,8 @@
     <div class="hero-foot">
         <nav class="tabs">
             <div class="container">
-                <ul>
-                    <li class="secciones"><a>Overview</a></li>
+                <ul class="secciones">
+                    <li><a>Overview</a></li>
                     <li><a>How it works?</a></li>
                     <li><a>Projects</a></li>
                     <li><a>Workers</a></li>
