--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,7 +32,7 @@ footer {
 .subtitulo {
   color: white; }
 
-.secciones {
+.secciones li a {
   color: white; }
 
 /*# sourceMappingURL=style.css.map */
