--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -12,8 +12,8 @@
     <input type="Number" name="postalCode" placeholder="codigo postal"/><br>        
 
     <input type="submit"/>
-</form>
-<br><br><br>-->
+</form>-->
+<br><br><br>
 
 <div class="container">
 
