--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -75,6 +75,8 @@
     </header>
     <form action="/signup" method="post">
     <section class="modal-card-body">
+      <a class="googlelogin" href="/auth/google"><img src="images/google-sign-in.png" alt="Google_login" width="230" ></a>
+      <hr>
       <section class="formulario">
           <div class="field is-horizontal">
             <div class="field-label is-normal">
@@ -214,6 +216,8 @@
     </header>
     <form action="/login" method="post">
     <section class="modal-card-body">
+            <a class="googlelogin" href="/auth/google"><img src="images/google-sign-in.png" alt="Google_login" width="230" ></a>
+      <hr>
       <section class="formulario">
           <div class="field is-horizontal">
             <div class="field-label is-normal">
