--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -14,7 +14,6 @@
           {{#if profilePhoto}}
           <img src="{{profilePhoto}}" alt="" >
           {{else}}
-          <h2>{{name}}</h2>
           <img  src="https://media.forgecdn.net/avatars/124/768/636424778749237239.jpeg" alt="avatar"/>
           {{/if}}
 
@@ -28,9 +27,9 @@
           <p>
             <span class='title is-bold cap'>{{name}} {{lastname}} </span>
             <br>
-            <a acttion="logout" type="file" name="profilePhoto" class='button is-dark is-outlined avatar' href='#' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
+            <a action="logout" type="file" name="profilePhoto" class='button is-dark is-outlined avatar' href='#' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
               <input type="file" name="profilePhoto" id="file" hidden/>Update Profile Pic
-            </a>
+            </a>         
               <a href="/logout" type="submit" name="logout" class='button is-dark is-outlined' style='margin: 5px 0' method="get">
               <input type="submit" name="logout" hidden>Log Out
             </a>
@@ -51,8 +50,12 @@
         <div class='column is-2-tablet is-4-mobile has-text-centered'>
           <p class='stat-val cap'> {{role}} </p>
           <p class='stat-key'>Type</p>
-        </div>        
+        </div>   
+          <a class='button is-dark is-outlined avatar'  style='margin: 5px 0'>
+            <input type="button" hidden/>Update Profile Info
+          </a>        
       </div>
+      
       <hr>
 </div>
 </section>
