--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
               <img src="images/fixit logo.png" alt="Logo">
             </h1>
             <h2 class="subtitle subtitulo">
-              Find the best people for your solutions
+              Find the best people for your solutions {{name}}
             </h2>
         </div>
     </div>
@@ -23,16 +23,64 @@
         <nav class="tabs">
             <div class="container">
                 <ul class="secciones">
-                    <li><a>How it works?</a></li>
-                    <li><a>Projects</a></li>
-                    <li><a>Workers</a></li>
+                    <li><a id="how">How it works?</a></li>
+                    <li><a id="projects">Projects</a></li>
+                    <li><a id="workers">Workers</a></li>
                 </ul>
             </div>
         </nav>
     </div>
 </section>
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container how ">
+    <div class="columns is-8">
+        <div class="column">
+            <i class="fas fa-wrench" style="font-size:80px;"></i> <br><br>
+            <h4 class="title is-4">Publish your issue</h4>
+        </div>
+        <div class="column">  
+            <i class="fas fa-phone-volume" style="font-size:80px;"></i><br><br>
+            <h4 class="title is-4">Find a worker who meets your needs</h4>            
+        </div>
+        <div class="column">
+            <i class="far fa-handshake" style="font-size:80px;"></i><br><br>
+            <h4 class="title is-4">Find the best deals with the best workers</h4>
+        </div>
+    </div>
+</div>
+
+<div class="container projects">
+    <article class="media">
+  <figure class="media-left">
+    <p class="image is-64x64">
+      <img src="https://bulma.io/images/placeholders/128x128.png">
+    </p>
+  </figure>
+  <div class="media-content">
+    <div class="content">
+      <p>
+        <strong>John Smith</strong>  <small>31m</small>
+        <br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+      </p>
+    </div>
+    <nav class="level is-mobile">
+      <div class="level-left">
+        <a class="level-item">
+          <span class="icon is-small"><i class="fas fa-reply"></i></span>
+        </a>
+        <a class="level-item">
+          <span class="icon is-small"><i class="fas fa-retweet"></i></span>
+        </a>
+        <a class="level-item">
+          <span class="icon is-small"><i class="fas fa-heart"></i></span>
+        </a>
+      </div>
+    </nav>
+  </div>
+  <hr>
+</article>
+
+</div>
 
 
 
