--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -81,7 +81,7 @@
     </header>
     <form action="/signup" method="post">
     <section class="modal-card-body">
-      <a class="googlelogin" href="/auth/google"><img src="images/google-sign-in.png" alt="Google_login" width="230" ></a>
+      <a class="googlelogin" href="/google-login"><img src="images/google-sign-in.png" alt="Google_login" width="230" ></a>
       <hr>
       <section class="formulario">
           <div class="field is-horizontal">
@@ -222,8 +222,7 @@
     </header>
     <form action="/login" method="post">
     <section class="modal-card-body">
-      <meta name="google-signin-client_id" content="796743130836-dd1ro4b9d0i1qje3rns5md8kmo84q3a5.apps.googleusercontent.com">
-            <a class="g-signin2" data-onsuccess="onSignIn" ><img src="images/google-sign-in.png" alt="Google_login" width="230" ></a>
+    <a href="/google-login">login con google</a>
       <hr>
       <section class="formulario">
           <div class="field is-horizontal">
