--- a/views/auth/jobs.hbs
+++ b/views/auth/jobs.hbs
@@ -5,9 +5,9 @@
 
 
 <h1>Aqui van los trabajos</h1>
-<div class="jobstable">
+<article class="tb">
 
-</div>
+</article>
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -22,39 +22,25 @@
     <tr>
       <th scope="row">1</th>
       <td>{{this.title}}</td>
-      <td>{{this.user}}</td>
+      <td>{{user.name}}</td>
       <td>{{this.desc}}</td>
       {{/each}}
 
     </tr>
   </tbody>
 </table>
-</div></div>
+</article>
 
 
+<style>
+
+.table td tr{
+  max-width:200px
+}
+
+</style>
 
 
-<table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Solicitud</th>
-      <th scope="col">Usuario</th>
-      <th scope="col">Fecha de creación</th>
-    </tr>
-  </thead>
-  {{#each users}}
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>{{this.project}}asdasda</td>
-      <td>{{this.name}}asdasdaa</td>
-      <td>{{this.lastname}}sdasd</td>
-      {{/each}}
-
-    </tr>
-  </tbody>
-</table>
 
 
 
