--- a/views/auth/users.hbs
+++ b/views/auth/users.hbs
@@ -1,3 +1,8 @@
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+</head>
+
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -11,7 +16,7 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>{{this.project}}asdasda</td>
+      <td>{{project.title}}asdasda</td>
       <td>{{this.name}}asdasdaa</td>
       <td>{{this.lastname}}sdasd</td>
       {{/each}}
