es todo por hoy

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,4 +87,11 @@ body {
   justify-content: center;
   text-align: center; }
 
+.footer {
+  position: fixed;
+  left: 0px;
+  bottom: -50px;
+  height: 20px;
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
