--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -105,3 +105,12 @@ body {
   justify-content:center;
   text-align: center;
 }
+
+
+.footer {
+  position:fixed;
+  left:0px;
+  bottom:-50px;
+  height:20px;
+  width:100%;
+}
