--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,7 +25,7 @@
                 <ul class="secciones">
                     <li><a id="how">How it works?</a></li>
                     <li><a id="projects">Projects</a></li>
-                    <li><a id="workers">Workers</a></li>
+                    <li><a id="workers">Top Workers</a></li>
                 </ul>
             </div>
         </nav>
@@ -79,7 +79,104 @@
   </div>
   <hr>
 </article>
+</div>
 
+<div class="container workers">
+  <div class="columns is-8">
+    <div class="column">
+
+<br><br>
+<div class="card">
+  <div class="card-image">
+    <figure class="image is-4by3">
+      <img src="images/plomero1.jpeg" alt="Placeholder image">
+    </figure>
+  </div>
+  <div class="card-content">
+    <div class="media">
+      <div class="media-left">
+        <figure class="image is-48x48">
+          <img src="images/plomero1.2.jpg" alt="Placeholder image">
+        </figure>
+      </div>
+      <div class="media-content">
+        <p class="title is-4">John Smith</p>
+      </div>
+    </div>
+
+    <div class="content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Phasellus nec iaculis mauris.
+      <br>
+    </div>
+  </div>
+</div>
+
+
+    </div>
+    <div class="column">  
+
+<br><br>
+<div class="card">
+  <div class="card-image">
+    <figure class="image is-4by3">
+      <img src="images/electricista.jpg" alt="Placeholder image">
+    </figure>
+  </div>
+  <div class="card-content">
+    <div class="media">
+      <div class="media-left">
+        <figure class="image is-48x48">
+          <img src="images/electricista1.2.jpg" alt="Placeholder image">
+        </figure>
+      </div>
+      <div class="media-content">
+        <p class="title is-4">John Smith</p>
+      </div>
+    </div>
+
+    <div class="content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Phasellus nec iaculis mauris.
+      <br>
+    </div>
+  </div>
+</div>
+
+
+    </div>
+    <div class="column">
+
+<br><br>
+<div class="card">
+  <div class="card-image">
+    <figure class="image is-4by3">
+      <img src="images/cerrajero1.jpg" alt="Placeholder image">
+    </figure>
+  </div>
+  <div class="card-content">
+    <div class="media">
+      <div class="media-left">
+        <figure class="image is-48x48">
+          <img src="images/cerrajero1.2.jpg" alt="Placeholder image">
+        </figure>
+      </div>
+      <div class="media-content">
+        <p class="title is-4">John Smith</p>
+      </div>
+    </div>
+
+    <div class="content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Phasellus nec iaculis mauris.
+      <br>
+    </div>
+  </div>
+</div>
+
+
+    </div>
+  </div>
 </div>
 
 
