--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -31,7 +31,7 @@
           <p>
             <span class='title is-bold cap'>{{name}} {{lastname}} </span>
             <br>
-            <a action="logout" type="file" name="profilePhoto" class='button is-dark is-outlined avatar' href='#' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
+            <a action="logout" type="file" name="profilePhoto" class='button is-dark is-outlined avatar' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
               <input type="file" name="profilePhoto" id="file" hidden/>Update Profile Pic
             </a>         
               <a href="/logout" type="submit" name="logout" class='button is-dark is-outlined' style='margin: 5px 0' method="get">
@@ -61,9 +61,6 @@
       </div>
       
       <hr>
-</div>
-</section>
-<br><br>
 <section>
 <form class="" action="/projects/new" method="post" enctype="multipart/form-data">
 <input type="text" name="title" placeholder="Que necesitas reparar?"><br>
@@ -116,3 +113,8 @@
     </tr>
   </tbody>
 </table>
+
+
+</div>
+</section>
+<br><br>
