--- a/views/auth/job-detail.hbs
+++ b/views/auth/job-detail.hbs
@@ -1,18 +1,20 @@
-<a href="/jobs">Regresar</a>
+<div class="">
+  <a href="/jobs">Regresar</a>
 
-<h1>que esta pasando</h1>
-<h1>{{project.title}}
-</h1>
-<br>
-  {{project.username}} {{project.desc}}</h1>
-<br>
-{{#each project.photos}}
-<img src="{{this}}" alt="fotito">
-{{/each}}
+  <h1>que esta pasando</h1>
+  <h1>{{project.title}}</h1>
+  <br>
+    <h1>{{project.username}} {{project.desc}}</h1>
+  <br>
+  {{#each project.photos}}
+  <img src="{{this}}" alt="fotito">
+  {{/each}}
 
+</div>
 
 <style>
 img{
   width:300px;
   height:300px
 }
+</style>
