--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,8 @@
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
      <link rel='stylesheet' href='stylesheets/style.css' />
+     <link rel='stylesheet' href='../stylesheets/style.css' />
+
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 <body>
@@ -14,7 +16,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            <img src="images/fixit logo.png" alt="Logo">
+            <img src="../images/fixit logo.png" alt="Logo">
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroA">
             <span></span>
@@ -36,11 +38,11 @@
             </a>
             {{else}}
             <a class="navbar-item is-active"  id="modal-login">
-              login 
+              login
             </a>
              <a class="navbar-item" id="modal-signup">
               Sign Up
-            </a>            
+            </a>
             {{/if}}
           </div>
         </div>
@@ -62,7 +64,7 @@
     </div>
   </div>
 </footer>
-</section>    
+</section>
 
 
 {{!--
@@ -104,7 +106,7 @@
                     <i class="fas fa-user"></i>
                   </span>
                 </p>
-              </div>            
+              </div>
               <div class="field">
                 <p class="control is-expanded has-icons-left has-icons-right">
                   <input class="input" type="email" placeholder="Email" name="username">
@@ -197,7 +199,7 @@
             </div>
           </div>
           <br><br>
-      </section>      
+      </section>
     </section>
       <footer class="modal-card-foot">
         <button class="button is-success delete2" type="submit">Save changes</button>
@@ -237,7 +239,7 @@
                     <i class="fas fa-envelope"></i>
                   </span>
                 </p>
-              </div>        
+              </div>
               <div class="field">
                 <p class="control is-expanded has-icons-left has-icons-right">
                   <input class="input" type="password" placeholder="Password" name="password">
@@ -248,7 +250,7 @@
               </div>
             </div>
           </div>
-      </section>      
+      </section>
     </section>
       <footer class="modal-card-foot">
         <button class="button is-success delete2" type="submit">Log In</button>
