--- a/views/auth/job-detail.hbs
+++ b/views/auth/job-detail.hbs
@@ -1,20 +1,82 @@
-<div class="">
+
+<br><br>
+<div class="container">
+  <div class="notification">
+    <a href="/jobs" class="button is-link is-outlined">Return</a><br><br>
+<div class="tile is-ancestor">
+  <div class="tile is-4 is-vertical is-parent">
+    <div class="tile is-child box">
+      <p class="title">{{project.title}}</p>
+      <p>
+        <a class="button is-success">Place a Bid</a>
+        <a class="button is-danger">Report this project</a>
+      </p>
+
+    </div>
+    <div class="tile is-child box">
+      <p class="title">Map</p>
+      <img src="../images/maps.png" alt="map">
+    </div>
+  </div>
+  <div class="tile is-parent">
+    <div class="tile is-child box">
+      <p class="title">Project Description</p>
+      <p>{{project.desc}}</p>
+
+      <p>
+        {{#each project.photos}}
+  <img class="imgDesc" src="{{this}}" alt="fotito">
+  {{/each}}
+  </p>
+    </div>
+  </div>
+</div>
+
+</div>
+</div>
+
+
+<style>
+.imgDesc{
+  width:300px;
+  height:300px
+}
+</style>
+
+
+
+
+
+
+
+
+
+
+<!------------------------------
+<head>
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+   <link rel='stylesheet' href='stylesheets/style.css' />
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+
+<div>
   <a href="/jobs">Regresar</a>
 
-  <h1>que esta pasando</h1>
-  <h1>{{project.title}}</h1>
+  <h1>Empleo</h1>
+  <h1>{{project.user.name}}</h1>
   <br>
-    <h1>{{project.username}} {{project.desc}}</h1>
+    <h1>{{users}}{{project.desc}}</h1>
   <br>
   {{#each project.photos}}
   <img src="{{this}}" alt="fotito">
   {{/each}}
 
 </div>
-
 <style>
 img{
   width:300px;
   height:300px
 }
 </style>
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>-->
