--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -29,11 +29,11 @@
         </div>
         <div class='column is-4-tablet is-10-mobile name'>
           <p>
-            <span class='title is-bold cap'>{{name}} {{lastname}} </span>
+            <span class='title is-bold cap'>{{user.name}} {{user.lastname}} </span>
             <br>
             <a action="logout" type="file" name="profilePhoto" class='button is-dark is-outlined avatar' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
-              <input type="file" name="profilePhoto" id="file" hidden/>Update Profile Pic
-            </a>         
+              <input type="file" name="profilePhoto" id="file"/>Update Profile Pic
+            </a>
               <a href="/logout" type="submit" name="logout" class='button is-dark is-outlined' style='margin: 5px 0' method="get">
               <input type="submit" name="logout" hidden>Log Out
             </a>
@@ -52,14 +52,14 @@
           <p class='stat-key'>Reviews</p>
         </div>
         <div class='column is-2-tablet is-4-mobile has-text-centered'>
-          <p class='stat-val cap'> {{role}} </p>
+          <p class='stat-val cap'> {{user.role}} </p>
           <p class='stat-key'>Type</p>
-        </div>   
+        </div>
           <a class='button is-dark is-outlined avatar'  style='margin: 5px 0'>
             <input type="button" hidden/>Update Profile Info
-          </a>        
+          </a>
       </div>
-      
+
       <hr>
 <section>
 <form class="" action="/projects/new" method="post" enctype="multipart/form-data">
@@ -89,34 +89,34 @@
     </footer>
   </div>
 </div>
+<div class="container">
+  <div class="notification">
 <div class="jobstable">
 </div>
- {{#each user.projects}}
-<li> {{this}}</li>
-{{/each}}
-<table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Solicitud</th>
-      <th scope="col">Usuario</th>
-      <th scope="col">Fecha de creación</th>
-    </tr>
-  </thead>
-  {{#each users}}
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>{{this.project}}</td>
-      <td>{{this.name}}</td>
-      <td>{{this.lastname}}</td>
-      {{/each}}
+<br>
+<section class="profile-jobs">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Servicio</th>
+        <th scope="col">Descripción</th>
+        <th scope="col">Fecha de creación</th>
+      </tr>
+    </thead>
+    {{#each user.projects}}
+    <tbody>
+      <tr>
+        <th scope="row">{{counter @index}}</th>
+        <td><a href="/jobs/{{_id}}">{{this.title}}</a></td>
 
-    </tr>
-  </tbody>
-</table>
-
-
-</div>
-</section>
-<br><br>
+        <td>{{this.desc}}</td>
+        <td>{{moment this.date "HH:mm - DD/MMMM/YYYY"}}</td>
+        {{/each}}
+      </tr>
+    </tbody>
+  </table>
+</div></div>
+<br><br><br>
+<br><br><br>
+<br><br><br>
