--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
      <link rel='stylesheet' href='stylesheets/style.css' />
+      <link rel='stylesheet' href='../stylesheets/style.css' />
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 <body>
@@ -14,7 +15,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            <img src="images/fixit logo.png" alt="Logo">
+            <img src="../images/fixit logo.png" alt="Logo">
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroA">
             <span></span>
