--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,13 +1,4 @@
-<head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-</head>
-<style>
-#profilePhoto{
-  width:200px;
-  height: :200px;
-}
-</style>
 <br><br>
 
 <section class="profile">
@@ -20,7 +11,6 @@
           {{else}}
           <img  src="https://media.forgecdn.net/avatars/124/768/636424778749237239.jpeg" alt="avatar"/>
           {{/if}}
-
           <form class="avatar" action="/profile" method="post" enctype="multipart/form-data">
             <input type="file" name="profilePhoto" id="file" hidden/>
             <input type="submit" value="Guardar">
@@ -31,10 +21,10 @@
           <p>
             <span class='title is-bold cap'>{{name}} {{lastname}} </span>
             <br>
-            <a action="logout" type="file" name="profilePhoto" class='button is-dark is-outlined avatar' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
-              <input type="file" name="profilePhoto" id="file" hidden/>Update Profile Pic
-            </a>         
-              <a href="/logout" type="submit" name="logout" class='button is-dark is-outlined' style='margin: 5px 0' method="get">
+            <a type="file" name="profilePhoto" class='button is-dark is-outlined avatar' href='#' id='profilePhoto' style='margin: 5px 0' method="post" enctype="multipart/form-data">
+              <input type="file" name="profilePhoto" id="file"/>Update Profile Pic
+            </a>     
+              <a href="/logout" type="submit" name="logout" class='button is-danger is-outlined' style='margin: 5px 0' method="get">
               <input type="submit" name="logout" hidden>Log Out
             </a>
             <br>
